<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projectname.TinderScreen" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/camden_yards" />    
    
    <ImageView
        android:id="@+id/image_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:paddingBottom="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/image_border" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/location_description"
        android:textSize="22sp" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_border"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/location_title"
        android:textSize="55sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/description" >

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/rating"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/distance"
            android:gravity="center"
            android:textSize="28sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/nav_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_background" />

        <ImageView
            android:id="@+id/nav_border_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="centerInside"
            android:src="@drawable/nav_border" />

        <ImageView
            android:id="@+id/nav_border_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="centerInside"
            android:src="@drawable/nav_border" />

        <LinearLayout
            android:id="@+id/nav_icons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/search_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/search_icon" />

            <ImageButton
                android:id="@+id/home_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:padding="27.5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/home_icon" />

            <ImageButton
                android:id="@+id/more_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/image_description"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/more_icon" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
